# Personal_and_School_Projects

train-control-system/: CMakeLists.txt  README.md
train-control-system/include/: config.h  control.h  motion.h  safety.h  station.h  telemetry.h  train.h  types.h
train-control-system/src/: control_task.c  main.c  motion_task.c  safety.c  sensor_task.c  system_init.c  telemetry.c
